<resources>
    <string name="app_name">LetsTalk</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid Host Name</string>
    <string name="invalid_password">Not a valid Port Number</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_id">"Login ID"</string>
    <string name="host_name">"Host Name"</string>
    <string name="port_number">"Port Number"</string>
    <string name="sign_in">"LOGIN"</string>
    <string name="tips">
        "⚠️IMPORTANT⚠️:✅ Each time, one must tap the Message window(the top first) to fetch the message from the Server or sometimes need to update after 🚀SEND.✅ The Command feedback will be displayed on the Edit window; One ought to Clear the feedback before sending anything else.✅ Click 🛰HIDE to hide the keyboard⌨️.✅ Click 🚀SEND to send the Command or the message📝.️
        💻COMMAND💻:
        1⃣️ #quit Causes the client to terminate gracefully. The connection to the server will be terminated before exiting the program.
        2⃣️ #logoff Causes the client to disconnect from the server, but not quit.
        3⃣️ #sethost [host] Calls the setHost method in the client, where '[host]' is your new host. Only allowed if the client is logged off; displays an error message otherwise.
        4⃣️ #setport [port] Calls the setPort method in the client, with the same constraints as #sethost. '[port]' is your new port.
        5⃣️ #login Causes the client to connect to the server. Only allowed if the client is not already connected; displays an error message otherwise.
        6⃣️ #gethost Displays the current host name.
        7⃣️ #getport Displays the current port number."</string>
</resources>
